# test-QtIFW

./: CMakeLists.txt  install_operations.qs  main.cpp  manual_test.sh  python.qs  pythonwidget.ui
.github/workflows/: build.yml  windows_build.yml
resources/subresources/: subresources.txt
